# OSTIA

./: .gitignore  CMakeLists.txt  README.md  tree_structure.txt
docs/: README.md  design.md  features.md  roadmap.md  setup.md
libs/: README.md
src/: main.cpp
src/core/: CommandProcessor.cpp  CommandProcessor.hpp  NLPEngine.cpp  NLPEngine.hpp  OSTIA.cpp  OSTIA.hpp
src/utils/: Logger.cpp  Logger.hpp
tests/: CMakeLists.txt  test_command_processor.cpp  test_main.cpp
